# ChangeLog for gnome-extra/hotssh
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  10 Feb 2011; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Metadata.xml fixed

*hotssh-0.2.6 (01 Sep 2009)

  01 Sep 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
  +hotssh-0.2.6.ebuild, +metadata.xml:
  Written by me
