@@ -1,1 +1,1 @@
-DIST hotssh-0.2.6.tar.bz2 160586 SHA256 c9e464e5231a3ffcf9d232799809b9774c799a771915ccd2cb7206e572761926
+DIST hotssh-0.2.6.tar.bz2 160586 SHA256 c9e464e5231a3ffcf9d232799809b9774c799a771915ccd2cb7206e572761926 SHA512 d9d24beb5202085eb60a801b4163d41e9b4ad918ba5ee0a6bd140ed9b94733a617fb487a81798b8a455a60efeb461b65b6e070bbb4083f42706b744da758fe69 WHIRLPOOL 4ab117fc61fe424b27c80558afb2bf871a58b962ef7303835ad0cdb6c779c114a0d7072a620b711b4242fd3cacf8a6de5070e778cd7973bc90b5c20ee78d3708
