@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/hotssh
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  03 Jul 2013; Justin Lecher <jlec@gentoo.org> hotssh-0.2.6.ebuild,
+  metadata.xml:
+  Bump to EAPI=5 and new python eclass; add missing deps
 
   10 Feb 2011; Justin Lecher <jlec@gentoo.org> metadata.xml:
   Metadata.xml fixed
